GP-DATA/active/policies/generated/deny-privileged.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  annotations:
    compliance: CIS-5.2.5
    description: Prevent privileged containers
    generated-by: jade-policy-generator
  name: k8sdenyprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sDenyPrivileged
      validation:
        openAPIV3Schema:
          type: object
  targets:
  - rego: "package k8sdenyprivileged\n\nviolation[{\"msg\": msg}] {\n    container\
      \ := input.review.object.spec.containers[_]\n    container.securityContext.privileged\
      \ == true\n    msg := sprintf(\"Container %v cannot run in privileged mode\"\
      , [container.name])\n}"
    target: admission.k8s.gatekeeper.sh
